{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 30,
  "lineage": "bfcaec37-b757-3650-daa4-198ac58995c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:498765197219:instance/i-0681cc54d744dc5b7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0681cc54d744dc5b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-007d148d09deaa5b5",
            "private_dns": "ip-10-0-0-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.37",
            "public_ip": "34.203.201.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0366e6b8fc691bee9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ebfd251ac2f72cdf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0507e5c4f2b6e0634",
            "tags": {
              "Name": "terraform-ec2-instance"
            },
            "tags_all": {
              "Name": "terraform-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ebfd251ac2f72cdf"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498765197219:internet-gateway/igw-04bae0722aefe50f0",
            "id": "igw-04bae0722aefe50f0",
            "owner_id": "498765197219",
            "tags": {
              "Name": "terraform-internet-gate-way"
            },
            "tags_all": {
              "Name": "terraform-internet-gate-way"
            },
            "vpc_id": "vpc-046cd13dbb75ecfbe"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498765197219:route-table/rtb-03f76281bdc3abf43",
            "id": "rtb-03f76281bdc3abf43",
            "owner_id": "498765197219",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04bae0722aefe50f0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-routingtable"
            },
            "tags_all": {
              "Name": "terraform-routingtable"
            },
            "timeouts": null,
            "vpc_id": "vpc-046cd13dbb75ecfbe"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0827b6ed2179b16f7",
            "route_table_id": "rtb-03f76281bdc3abf43",
            "subnet_id": "subnet-0507e5c4f2b6e0634"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498765197219:security-group/sg-0ebfd251ac2f72cdf",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebfd251ac2f72cdf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "498765197219",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group-test"
            },
            "tags_all": {
              "Name": "security-group-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-046cd13dbb75ecfbe"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498765197219:subnet/subnet-0507e5c4f2b6e0634",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0507e5c4f2b6e0634",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498765197219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-046cd13dbb75ecfbe"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iti-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498765197219:vpc/vpc-046cd13dbb75ecfbe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4efd9879f468f0e",
            "default_route_table_id": "rtb-0b88f1132c2341d45",
            "default_security_group_id": "sg-02154ca401fba7329",
            "dhcp_options_id": "dopt-00f29d42e75817a08",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046cd13dbb75ecfbe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b88f1132c2341d45",
            "owner_id": "498765197219",
            "tags": {
              "Name": "iti-vpc"
            },
            "tags_all": {
              "Name": "iti-vpc"
            }
          }
        }
      ]
    }
  ]
}